# gaia

./: .travis.yml  LICENSE  README.md  gaia.cabal
example/: example.hs
examples/: example1.lhs
src/Gaia/: Abstract.hs  Prelude.hs
src/Gaia/Orphans/: Bool.hs  Integer.hs
src/Math/: Gaia.hs
src/Math/Gaia/: Bool.hs  Category.hs  Double.hs  Finite.hs  Float.hs  Int.hs  Integer.hs  Prelude.hs  Rational.hs  Vector.hs
test/: test.hs
