name:                gaia
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/SamuelSchlesinger/gaia#readme
license:             BSD3
license-file:        LICENSE
author:              Samuel Schlesinger
maintainer:          sgschlesinger at gmail dot com
copyright:           (c) 2016-2018 Samuel Schlesinger
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Gaia.Abstract, Gaia.Orphans.Bool
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SamuelSchlesinger/gaia
