name:                gaia
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/SamuelSchlesinger/gaia#readme
license:             BSD3
license-file:        LICENSE
author:              Samuel Schlesinger
maintainer:          sgschlesinger at gmail dot com
copyright:           (c) 2016-2018 Samuel Schlesinger
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Math.Gaia,
                       Math.Gaia.Prelude,
                       Math.Gaia.Int,
                       Math.Gaia.Integer,
                       Math.Gaia.Double,
                       Math.Gaia.Float,
                       Math.Gaia.Bool,
                       Math.Gaia.Finite,  
                       Math.Gaia.Category
                       
  build-depends:       base >= 4.7 && < 5,
                       protolude, 
                       constraints
  default-language:    Haskell2010
  default-extensions:
    NoImplicitPrelude,
    UnicodeSyntax,
    BangPatterns,
    BinaryLiterals,
    DeriveFoldable,
    DeriveFunctor,
    DeriveGeneric,
    DeriveTraversable,
    DisambiguateRecordFields,
    EmptyCase,
    FlexibleContexts,
    FlexibleInstances,
    FunctionalDependencies,
    GADTSyntax,
    InstanceSigs,
    KindSignatures,
    LambdaCase,
    MonadComprehensions,
    MultiParamTypeClasses,
    MultiWayIf,
    NegativeLiterals,
    OverloadedStrings,
    ParallelListComp,
    PartialTypeSignatures,
    PatternSynonyms,
    RankNTypes,
    RecordWildCards,
    RecursiveDo,
    ScopedTypeVariables,
    TupleSections,
    TypeFamilies,
    TypeOperators

test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    test.hs
  build-depends:
    base >= 4.7 && < 5,
    protolude,
    tasty,
    HUnit,
    tasty-hunit,
    smallcheck,
    tasty-smallcheck,
    QuickCheck,
    tasty-quickcheck,
    gaia
  default-extensions:
    NoImplicitPrelude,
    UnicodeSyntax,
    BangPatterns,
    BinaryLiterals,
    DeriveFoldable,
    DeriveFunctor,
    DeriveGeneric,
    DeriveTraversable,
    DisambiguateRecordFields,
    EmptyCase,
    FlexibleContexts,
    FlexibleInstances,
    FunctionalDependencies,
    GADTSyntax,
    InstanceSigs,
    KindSignatures,
    LambdaCase,
    MonadComprehensions,
    MultiParamTypeClasses,
    MultiWayIf,
    NegativeLiterals,
    OverloadedStrings,
    ParallelListComp,
    PartialTypeSignatures,
    PatternSynonyms,
    RankNTypes,
    RecordWildCards,
    RecursiveDo,
    ScopedTypeVariables,
    TupleSections,
    TypeFamilies,
    TypeOperators

source-repository head
  type:     git
  location: https://github.com/SamuelSchlesinger/gaia
